--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -1,11 +1,11 @@
 ---
 layout: archive
-title: "Portfolio"
+title: "Research projects"
 permalink: /portfolio/
 author_profile: true
 ---
 
-#{% include base_path %}
+{% include base_path %}
 
 
 {% for post in site.portfolio %}
