--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -8,7 +8,7 @@ author_profile: true
 {% include base_path %}
 
 
-{% for post in [SingleCellMechanics.md] %}
+{% for post in site.portfolio reversed %}
   {% include archive-single.html %}
 {% endfor %}
 
