--- a/_pages/collaborations.html
+++ b/_pages/collaborations.html
@@ -4,4 +4,8 @@ title: "Collaborations"
 permalink: /collaborations/
 author_profile: false
 ---
+
+{% include base_path %}
+{% include group-by-array collection=site.posts field="categories" %}
+
 blabla
