--- a/_pages/collaborations.html
+++ b/_pages/collaborations.html
@@ -2,7 +2,7 @@
 layout: collaborations
 title: "Collaborations"
 permalink: /collaborations/
-author_profile: false
+author_profile: true
 ---
 
 {% include base_path %}
